# ntfy-jupyter

./: .gitignore  README.md  pyproject.toml
ntfy_jupyter/: __init__.py  notify.py  utils.py
